--- a/README.html
+++ b/README.html
@@ -62,6 +62,7 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="thread-safe-file-system-watcher">Thread Safe File System Watcher</h1>
 
+<p><a href="https://ci.appveyor.com/project/victorprocure/safefilesystemwatcher"><img src="https://ci.appveyor.com/api/projects/status/u75h99fbktsdhq49?svg=true" alt="Build status"></a></p>
 <p>This is a thread safe implementation of the file system watcher as an enumerable collection of fired events.</p>
 <h2 id="example">Example</h2>
 <h3 id="using-watcher">Using Watcher</h3>
