--- a/README.html
+++ b/README.html
@@ -62,7 +62,7 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="thread-safe-file-system-watcher">Thread Safe File System Watcher</h1>
 
-<p><a href="https://ci.appveyor.com/project/victorprocure/safefilesystemwatcher"><img src="https://ci.appveyor.com/api/projects/status/u75h99fbktsdhq49?svg=true" alt="Build status"></a>  <a href="https://www.codefactor.io/repository/github/victorprocure/safefilesystemwatcher"><img src="https://www.codefactor.io/repository/github/victorprocure/safefilesystemwatcher/badge" alt="CodeFactor"></a></p>
+<p><a href="https://ci.appveyor.com/project/victorprocure/safefilesystemwatcher"><img src="https://ci.appveyor.com/api/projects/status/u75h99fbktsdhq49?svg=true" alt="Build status"></a>  <a href="https://www.codefactor.io/repository/github/victorprocure/safefilesystemwatcher"><img src="https://www.codefactor.io/repository/github/victorprocure/safefilesystemwatcher/badge" alt="CodeFactor"></a>  <a href="https://bettercodehub.com/"><img src="https://bettercodehub.com/edge/badge/victorprocure/SafeFileSystemWatcher?branch=master" alt="BCH compliance"></a></p>
 <p>This is a thread safe implementation of the file system watcher as an enumerable collection of fired events.</p>
 <h2 id="example">Example</h2>
 <h3 id="using-watcher">Using Watcher</h3>
