--- a/toc.html
+++ b/toc.html
@@ -15,7 +15,7 @@
                     <a href="articles/getting_started.html" name="articles/toc.html" title="Articles">Articles</a>
                 </li>
                 <li>
-                    <a href="api/SafeFileSystemWatcher.html" name="api/toc.html" title="Api Documentation">Api Documentation</a>
+                    <a href="api/SafeFileSystemWatcher.Collections.html" name="api/toc.html" title="Api Documentation">Api Documentation</a>
                 </li>
           </ul>
       </div>
